@@ -641,7 +641,12 @@ boost::shared_ptr<PSEvt::Proxy<{{psanatypename}}> > make_{{type.name}}(int versi
 :  psanatypename - name of C++ psana interface type 
 :
 
+/// Store object as a single instance (scalar dataset) inside specified group.
 void store(const {{psanatypename}}& obj, hdf5pp::Group group, int version = -1);
+/// Create container (rank=1) datasets for storing objects of specified type.
+void make_datasets(const {{psanatypename}}& obj, hdf5pp::Group group, hsize_t chunk_size,
+                   int deflate, bool shuffle, int version = -1);
+/// Add one more object to the containers created by previous method
 void append(const {{psanatypename}}& obj, hdf5pp::Group group, int version = -1);
 
 ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
@@ -655,6 +660,21 @@ void append(const {{psanatypename}}& obj, hdf5pp::Group group, int version = -1)
 :    versions      - list of all schema versions
 :    max_version   - latest schema version number
 :
+
+void make_datasets(const {{psanatypename}}& obj, hdf5pp::Group group, hsize_t chunk_size,
+                   int deflate, bool shuffle, int version)
+{
+  if (version < 0) version = {{max_version}};
+  switch (version) {
+{% for v in versions %}
+  case {{v}}:
+    make_datasets_{{type.name}}_v{{v}}(obj, group, chunk_size, deflate, shuffle);
+    break;
+{% endfor %}
+  default:
+    throw ExceptionSchemaVersion(ERR_LOC, "{{type.fullName()}}", version);
+  }
+}
 
 void store_{{type.name}}(const {{psanatypename}}& obj, hdf5pp::Group group, int version, bool append)
 {
@@ -681,18 +701,6 @@ void append(const {{psanatypename}}& obj, hdf5pp::Group group, int version)
 }
 
 ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
-::::template:::: schema_store_decl
-::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
-:
-:  Template for implementation of the store() and append() methods. 
-:
-:  Parameters for this template:
-:    hschema    - instance of SchemaType class
-:
-
-void store_{{hschema.pstype.name}}_v{{hschema.schema.version}}(const {{hschema.pstypename}}& obj, hdf5pp::Group group, bool append);
-
-::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
 ::::template:::: schema_store_impl
 ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
 :
@@ -702,10 +710,169 @@ void store_{{hschema.pstype.name}}_v{{hschema.schema.version}}(const {{hschema.p
 :    hschema    - instance of SchemaType class
 :
 
-void store_{{hschema.pstype.name}}_v{{hschema.schema.version}}(const {{hschema.pstypename}}& obj, hdf5pp::Group group, bool append)
+void make_datasets_{{hschema.pstype.name}}_v{{hschema.schema.version}}(const {{hschema.pstypename}}& obj, 
+      hdf5pp::Group group, hsize_t chunk_size, int deflate, bool shuffle)
 {
+{% for ds in hschema.datasets %}
+{{ds.make_ds_impl()}}
+{% endfor %}
 }
 
+void store_{{hschema.pstype.name}}_v{{hschema.schema.version}}(const {{hschema.pstypename}}& obj, hdf5pp::Group group, bool append)
+{
+{% for ds in hschema.datasets %}
+{{ds.ds_write_impl()}}
+{% endfor %}
+}
+
+::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
+::::template:::: make_compound_ds
+::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
+:
+:  Template for piece of code which creates a dataset
+:
+:  Parameters for this template:
+:      ds  - instance of DatasetCompund type
+:
+  {
+    hdf5pp::Type dstype = {{ds.classNameNs()}}::stored_type();
+    unsigned chunk_cache_size = HdfParameters::chunkCacheSize(dstype, chunk_size);
+    hdf5pp::Utils::createDataset(group, "{{ds.name}}", dstype, chunk_size, chunk_cache_size, deflate, shuffle);    
+  }
+::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
+::::template:::: write_compound_ds
+::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
+:
+:  Template for piece of code which writes an object of compound type
+:
+:  Parameters for this template:
+:      ds  - instance of DatasetCompund type
+:
+  {
+    {{ds.classNameNs()}} ds_data(obj);
+    if (append) {
+      hdf5pp::Utils::append(group, "{{ds.name}}", ds_data);
+    } else {
+      hdf5pp::Utils::storeScalar(group, "{{ds.name}}", ds_data);
+    }
+  }
+::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
+::::template:::: make_array_ds_basic
+::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
+:
+:  Template for piece of code which creates a dataset
+:
+:  Parameters for this template:
+:      ds  - instance of DatasetRegular type
+:
+  {
+    typedef __typeof__(obj.{{ds.method}}()) PsanaArray;
+    const PsanaArray& psana_array = obj.{{ds.method}}();
+{% if ds.rank == 1 %}
+    hdf5pp::Type dstype = hdf5pp::ArrayType::arrayType(hdf5pp::TypeTraits<{{ds.type.name}}>::stored_type(), psana_array.shape()[0]);
+{% else %}
+    hsize_t dims[{{ds.rank}}];
+    std::copy(psana_array.shape(), psana_array.shape()+{{ds.rank}}, dims);
+    hdf5pp::Type dstype = hdf5pp::ArrayType::arrayType(hdf5pp::TypeTraits<{{ds.type.name}}>::stored_type(), {{ds.rank}}, dims);
+{% endif %}
+    unsigned chunk_cache_size = HdfParameters::chunkCacheSize(dstype, chunk_size);
+    hdf5pp::Utils::createDataset(group, "{{ds.name}}", dstype, chunk_size, chunk_cache_size, deflate, shuffle);    
+  }
+::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
+::::template:::: write_array_ds_basic
+::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
+:
+:  Template for piece of code which writes out ndarray of basic type
+:
+:  Parameters for this template:
+:      ds  - instance of DatasetRegular type
+:
+  if (append) {
+    hdf5pp::Utils::appendNDArray(group, "{{ds.name}}", obj.{{ds.method}}());
+  } else {
+    hdf5pp::Utils::storeNDArray(group, "{{ds.name}}", obj.{{ds.method}}());
+  }
+::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
+::::template:::: make_array_ds_udt
+::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
+:
+:  Template for piece of code which creates a dataset
+:
+:  Parameters for this template:
+:      ds         - instance of DatasetRegular type
+:      ds_struct  - name of dataset structure for element type
+:
+  {
+    typedef __typeof__(obj.{{ds.method}}()) PsanaArray;
+    const PsanaArray& psana_array = obj.{{ds.method}}();
+{% if ds.rank == 1 %}
+    hdf5pp::Type dstype = hdf5pp::ArrayType::arrayType(hdf5pp::TypeTraits<{{ds_struct}}>::stored_type(), psana_array.shape()[0]);
+{% else %}
+    hsize_t dims[{{ds.rank}}];
+    std::copy(psana_array.shape(), psana_array.shape()+{{ds.rank}}, dims);
+    hdf5pp::Type dstype = hdf5pp::ArrayType::arrayType(hdf5pp::TypeTraits<{{ds_struct}}>::stored_type(), {{ds.rank}}, dims);
+{% endif %}
+    unsigned chunk_cache_size = HdfParameters::chunkCacheSize(dstype, chunk_size);
+    hdf5pp::Utils::createDataset(group, "{{ds.name}}", dstype, chunk_size, chunk_cache_size, deflate, shuffle);    
+  }
+::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
+::::template:::: write_array_ds_udt
+::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
+:
+:  Template for piece of code which writes out ndarray of user-defined types
+:
+:  Parameters for this template:
+:      ds         - instance of DatasetRegular type
+:      ds_struct  - name of dataset structure for element type
+:
+  {
+    typedef __typeof__(obj.{{ds.method}}()) PsanaArray;
+    typedef ndarray<{{ds_struct}}, {{ds.rank}}> HdfArray;
+    PsanaArray psana_array = obj.{{ds.method}}();
+    HdfArray hdf_array(psana_array.shape());
+    HdfArray::iterator out = hdf_array.begin();
+    for (PsanaArray::iterator it = psana_array.begin(); it != psana_array.end(); ++ it, ++ out) {
+      *out = {{ds_struct}}(*it);
+    }
+    if (append) {
+      hdf5pp::Utils::appendNDArray(group, "{{ds.name}}", hdf_array);
+    } else {
+      hdf5pp::Utils::storeNDArray(group, "{{ds.name}}", hdf_array);
+    }
+  }
+::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
+::::template:::: make_regular_ds
+::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
+:
+:  Template for piece of code which creates a dataset
+:
+:  Parameters for this template:
+:      ds         - instance of DatasetRegular type
+:      ds_struct  - name of dataset structure for element type
+:
+  {
+    hdf5pp::Type dstype = {{ds_struct}}::stored_type();
+    unsigned chunk_cache_size = HdfParameters::chunkCacheSize(dstype, chunk_size);
+    hdf5pp::Utils::createDataset(group, "{{ds.name}}", dstype, chunk_size, chunk_cache_size, deflate, shuffle);    
+  }
+::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
+::::template:::: write_regular_ds
+::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
+:
+:  Template for piece of code which writes out regular non-array datasets
+:
+:  Parameters for this template:
+:      ds         - instance of DatasetRegular type
+:      ds_struct  - name of dataset structure for element type
+:
+  {
+    {{ds_struct}} ds_data(obj.{{ds.method}}());
+    if (append) {
+      hdf5pp::Utils::append(group, "{{ds.name}}", ds_data);
+    } else {
+      hdf5pp::Utils::storeScalar(group, "{{ds.name}}", ds_data);
+    }
+  }
 ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
 ::::template:::: enum_decl
 ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
